--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Flask==2.3.3
 requests==2.31.0
 beautifulsoup4==4.12.2
-pandas==2.1.1
+numpy==1.24.3
+pandas==2.0.3
 openpyxl==3.1.2
 lxml==4.9.3
 xlsxwriter==3.1.2
 Werkzeug==2.3.7
 gunicorn==21.2.0
+
